Added Dockerfile and got the app in a state to test deployment.