@@ -7,6 +7,7 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
+import java.util.Collections;
 import java.util.List;
 
 import static com.stevedevblog.mvp.controllers.HomeController.*;
@@ -33,11 +34,12 @@ public class HomeController {
     }
 
     private List<PersistedBlogPost> getFeaturedPosts() {
-        List<PersistedBlogPost> posts = List.of(
-                blogPostService.getPostById("946a73ef-a24d-479c-bda7-0f62289adb87").get(),
-                blogPostService.getPostById("3e1ec8a6-325e-4bd8-9d12-f36ceab76b55").get(),
-                blogPostService.getPostById("911df52d-cb04-4dca-add6-c963b7ec09d4").get()
-        );
+//        List<PersistedBlogPost> posts = List.of(
+//                blogPostService.getPostById("946a73ef-a24d-479c-bda7-0f62289adb87").get(),
+//                blogPostService.getPostById("3e1ec8a6-325e-4bd8-9d12-f36ceab76b55").get(),
+//                blogPostService.getPostById("911df52d-cb04-4dca-add6-c963b7ec09d4").get()
+//        );
+        List<PersistedBlogPost> posts = Collections.emptyList();
 
         return posts;
     }
